<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.task3.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/title"
        android:id="@+id/imageView2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout style="@style/question_group">

                <TextView
                    style="@style/question_child"
                    android:text="@string/question1" />

                <RadioGroup
                    style="@style/question_child"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/question1_1"
                        style="@style/question_child"
                        android:layout_weight="1"
                        android:text="@string/question1_1" />

                    <RadioButton
                        android:id="@+id/question1_2"
                        style="@style/question_child"
                        android:layout_weight="1"
                        android:text="@string/question1_2" />

                    <RadioButton
                        android:id="@+id/question1_3"
                        style="@style/question_child"
                        android:layout_weight="1"
                        android:text="@string/question1_3" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/question_group">

                <TextView
                    style="@style/question_child"
                    android:text="@string/question2" />

                <RadioGroup
                    style="@style/question_child"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/question2_1"
                        style="@style/question_child"
                        android:layout_weight="1"
                        android:text="@string/question2_1" />

                    <RadioButton
                        android:id="@+id/question2_2"
                        style="@style/question_child"
                        android:layout_weight="1"
                        android:text="@string/question2_2" />

                    <RadioButton
                        android:id="@+id/question2_3"
                        style="@style/question_child"
                        android:layout_weight="1"
                        android:text="@string/question2_3" />


                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/question_group">

                <TextView
                    style="@style/question_child"
                    android:text="@string/question3" />

                <LinearLayout
                    style="@style/question_child"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/question3_1"
                        style="@style/question_child"
                        android:text="@string/question3_1" />

                    <CheckBox
                        android:id="@+id/question3_2"
                        style="@style/question_child"
                        android:text="@string/question3_2" />

                    <CheckBox
                        android:id="@+id/question3_3"
                        style="@style/question_child"
                        android:text="@string/question3_3" />

                    <CheckBox
                        android:id="@+id/question3_4"
                        style="@style/question_child"
                        android:text="@string/question3_4" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout style="@style/question_group">

                <TextView
                    style="@style/question_child"
                    android:text="@string/question4"
                    />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/question4"
                    android:inputType="text"
                    android:hint="@string/question4_hint"
                    android:ems="10"
                    android:layout_weight="1" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit"
        android:onClick="submitAnswer"/>




</LinearLayout>
